--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "1.0.0-beta.9",
+    "@types/react": "18.0.17",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "typescript": "4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.2",
+    "@types/react": "^18.0.17",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "typescript": "^4.7.4"
   }
 }
