--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "migration-demo",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "request": "*",
-    "mime": "*"
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "测试数据库case的时候可以把下面的依赖添加到dependencies":{
-    "mysql2": "^2.1.0",
-    "otswhere": "^0.0.4",
-    "sequelize": "^6.3.3",
-    "tablestore": "^5.0.7"
+  "dependencies": {
+    "@nextui-org/react": "1.0.0-beta.9",
+    "@types/lodash": "^4.14.182",
+    "@types/uuid": "^8.3.4",
+    "ahooks": "^3.7.0",
+    "ali-oss": "^6.17.1",
+    "express": "^4.18.1",
+    "lodash": "^4.17.21",
+    "next": "^12.2.5",
+    "node-fetch": "^3.2.10",
+    "query-string": "^7.1.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-iconly": "^2.2.5",
+    "react-router": "^6.3.0",
+    "typescript": "4.7.4",
+    "use-query-params": "^2.0.0",
+    "uuid": "^8.3.2",
+    "mime": "*",
+    "request": "*"
+  },
+  "devDependencies": {
+    "@types/ali-oss": "^6.16.4",
+    "@types/node": "^18.7.2",
+    "@types/react": "^18.0.17",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "typescript": "^4.7.4"
   }
 }
