--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
     "@nextui-org/react": "1.0.0-beta.9",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
@@ -14,6 +15,7 @@
     "ali-oss": "^6.17.1",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "mime": "*",
     "next": "^12.2.5",
     "node-fetch": "^3.2.10",
     "query-string": "^7.1.1",
@@ -21,11 +23,10 @@
     "react-dom": "18.0.0",
     "react-iconly": "^2.2.5",
     "react-router": "^6.3.0",
+    "request": "*",
     "typescript": "4.7.4",
     "use-query-params": "^2.0.0",
-    "uuid": "^8.3.2",
-    "mime": "*",
-    "request": "*"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/ali-oss": "^6.16.4",
