--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
-    "@nextui-org/react": "1.0.0-beta.9",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "ahooks": "^3.7.0",
@@ -19,8 +19,8 @@
     "next": "^12.2.5",
     "node-fetch": "^3.2.10",
     "query-string": "^7.1.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-iconly": "^2.2.5",
     "react-router": "^6.3.0",
     "request": "*",
