--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.0.17",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "swiper": "^8.3.2",
     "typescript": "^4.7.4"
   }
 }
